; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_rwebpad_joypad.c_rwebpad_joypad_get_buttons.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_rwebpad_joypad.c_rwebpad_joypad_get_buttons.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64* }

@EMSCRIPTEN_RESULT_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @rwebpad_joypad_get_buttons to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rwebpad_joypad_get_buttons(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %8 = load i32, i32* %3, align 4
  %9 = call i64 @emscripten_get_gamepad_status(i32 %8, %struct.TYPE_3__* %5)
  store i64 %9, i64* %6, align 8
  %10 = load i64, i64* %6, align 8
  %11 = load i64, i64* @EMSCRIPTEN_RESULT_SUCCESS, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %36

13:                                               ; preds = %2
  store i32 0, i32* %7, align 4
  br label %14

14:                                               ; preds = %32, %13
  %15 = load i32, i32* %7, align 4
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = icmp ult i32 %15, %17
  br i1 %18, label %19, label %35

19:                                               ; preds = %14
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %21 = load i64*, i64** %20, align 8
  %22 = load i32, i32* %7, align 4
  %23 = zext i32 %22 to i64
  %24 = getelementptr inbounds i64, i64* %21, i64 %23
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %31

27:                                               ; preds = %19
  %28 = load i32*, i32** %4, align 8
  %29 = load i32, i32* %7, align 4
  %30 = call i32 @BIT256_SET_PTR(i32* %28, i32 %29)
  br label %31

31:                                               ; preds = %27, %19
  br label %32

32:                                               ; preds = %31
  %33 = load i32, i32* %7, align 4
  %34 = add i32 %33, 1
  store i32 %34, i32* %7, align 4
  br label %14

35:                                               ; preds = %14
  br label %39

36:                                               ; preds = %2
  %37 = load i32*, i32** %4, align 8
  %38 = call i32 @BIT256_CLEAR_ALL_PTR(i32* %37)
  br label %39

39:                                               ; preds = %36, %35
  ret void
}

declare dso_local i64 @emscripten_get_gamepad_status(i32, %struct.TYPE_3__*) #1

declare dso_local i32 @BIT256_SET_PTR(i32*, i32) #1

declare dso_local i32 @BIT256_CLEAR_ALL_PTR(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
